tls/vanilla_tls.h

/*
 * vanilla_tls — a thin C adapter over Mbed TLS 4 (TLS 1.3).
 *
 * Why a C shim (not direct V bindings): Mbed TLS exposes its config via macros
 * with arguments (PSA_ALG_ECDSA(...), PSA_KEY_TYPE_ECC_KEY_PAIR(...)) and a dozen
 * opaque structs; wrapping the few operations we need in C is far cleaner than
 * binding all of that from V. V binds the handful of functions below.
 *
 * The self-signed certificate generation is ported from the project's reference
 * (concept-examples/TLS/server.c).
 */
#ifndef VANILLA_TLS_H
#define VANILLA_TLS_H

#include <stddef.h>

typedef struct vtls_ctx vtls_ctx; // server-wide TLS config (cert + key + ssl conf)

// Process-wide one-time init (psa_crypto_init). Returns 0 on success.
int vtls_global_init(void);

// Create/destroy a server TLS context.
vtls_ctx *vtls_ctx_new(void);
void vtls_ctx_free(vtls_ctx *ctx);

// Populate the context with a freshly generated self-signed certificate +
// key (EC P-256, TLS 1.3). `sans` are 1..16 "DNS:<host>" / "IP:<v4|v6>" entries
// the certificate will be valid for (clients validate against these, not the
// CN). `char *const *` rather than `const char *const *` only because V emits
// `char**` for `&&char` and gcc rejects the double-const conversion; the
// strings are never modified. Returns 0 on success, non-zero on a bad entry or
// generation failure.
int vtls_use_self_signed(vtls_ctx *ctx, char *const *sans, size_t nsans);

// Populate the context from PEM cert + key buffers. Returns 0 on success.
int vtls_use_pem(vtls_ctx *ctx, const unsigned char *cert, size_t clen,
                 const unsigned char *key, size_t klen);

// Finalize the SSL config (defaults, TLS 1.3, own cert). Call after use_*.
int vtls_setup(vtls_ctx *ctx);

// Configure the ALPN protocol list from a comma-separated string, in preference
// order (e.g. "http/1.1" or "h2,http/1.1"). Returns 0 on success. Call after
// vtls_setup, before creating sessions. Only advertise protocols you can serve.
int vtls_set_alpn(vtls_ctx *ctx, const char *list);

// The generated/loaded certificate as PEM (NUL-terminated), or NULL. Useful to
// save so a client can trust it (curl --cacert). Valid until vtls_ctx_free.
const char *vtls_cert_pem(vtls_ctx *ctx);

// The private key as PEM (NUL-terminated), or NULL. Set by vtls_use_self_signed
// (exported from the generated key) and by vtls_use_pem (a copy of the input,
// when it fits). Lets the caller persist the pair and reload it with
// vtls_use_pem, so the identity survives restarts. Valid until vtls_ctx_free.
const char *vtls_key_pem(vtls_ctx *ctx);

// The protocol negotiated via ALPN (e.g. "http/1.1"), or NULL if none. Valid
// only once the handshake on this session has completed.
const char *vtls_get_alpn(void *sess);

// ---- per-connection session (driven by the non-blocking epoll loop) --------

// Create a session bound to an already-accepted, non-blocking fd. NULL on error.
void *vtls_session_new(vtls_ctx *ctx, int fd);
void vtls_session_free(void *sess);

// Return codes. read/write return byte counts >= 0 on success, so the "blocked"
// and "error" signals are NEGATIVE to never collide with a 1-byte read.
//
// WANT_READ vs WANT_WRITE are distinct so the epoll worker knows which readiness
// to wait for: WANT_READ → arm EPOLLIN (the default), WANT_WRITE → arm EPOLLOUT
// (the socket send buffer is full; resume the same operation when it drains).
#define VTLS_OK 0          // handshake done
#define VTLS_WANT (-2)     // would block on READ — retry on the next EPOLLIN
#define VTLS_WANT_WRITE (-3) // would block on WRITE — retry on the next EPOLLOUT
#define VTLS_ERROR -1      // fatal — close the connection

// Drive the TLS handshake. VTLS_OK when complete, VTLS_WANT to retry, VTLS_ERROR.
int vtls_handshake(void *sess);

// Like recv/send but over TLS. read returns >=0 bytes, or VTLS_WANT / VTLS_ERROR.
int vtls_read(void *sess, unsigned char *buf, size_t len);
int vtls_write(void *sess, const unsigned char *buf, size_t len);

// ---- kTLS: kernel record-crypto offload ------------------------------------

// After vtls_handshake() returns VTLS_OK, try to hand record encrypt/decrypt to the
// kernel (TLS_TX + TLS_RX). Returns 1 if kTLS engaged — thereafter the caller does
// PLAIN recv()/send() on the fd and the kernel does AES-128-GCM. Returns 0 to keep
// using vtls_read/vtls_write (userspace mbedtls) — a safe fallback when the host
// lacks the tls ULP. If it returns 0 AND vtls_ktls_failed() is 1, the socket is
// half-converted and the caller MUST close the connection.
int vtls_enable_ktls(void *sess, int fd);
int vtls_ktls_active(void *sess);
int vtls_ktls_failed(void *sess);

#endif /* VANILLA_TLS_H */